add missing component
